--- a/ui/homepage.html
+++ b/ui/homepage.html
@@ -8,6 +8,7 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 <button class="button">Get in touch</button>
+<e class="e"> e </e>
 
 </body>
 </html> 
