--- a/ui/homepage.html
+++ b/ui/homepage.html
@@ -7,19 +7,19 @@
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-<button class="button" id="contactButton">Get in touch</button>
+<button class="button" id="killSwitch">Get in touch</button>
 
 <script>
-    document.getElementById('contactButton').addEventListener('click', async() => {
+    document.getElementById('killSwitch').addEventListener('click', async() => {
         try {
-            const res = await fetch('http://127.0.0.1:8000/contact', {
+            const res = await fetch('/terminate', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ message: 'Hello from homepage!' })
+                body: JSON.stringify({ message: 'Kill me pleaseeee !' })
             });
             const text = await res.text();
             console.log('Response from server:', text);
-            alert('Response: ' + text);
+			alert("server is dead");
         } catch (err) {
             console.error(err);
             alert('Error: ' + err.message);
